Fix overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,3 @@ html {
   padding: 0;
   margin: 0;
 }
-
-body {
-  overflow: hidden;
-}
